--- a/src/main/resources/act_message_en_GB.properties
+++ b/src/main/resources/act_message_en_GB.properties
@@ -12,3 +12,5 @@ e404.desc=NotFound 404 thrown out from source code:
 
 act.validation.constraints.Email.message=must be valid email
 act.validation.constraints.NotBlank.message=must not be blank string
+
+act.progress.report=current progress: {0}%
